--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,3 +2,13 @@
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
+a {
+    text-decoration: none;
+}
+.container {
+    max-width: 950px;
+    margin: 0 auto;
+}
+@import 'blocks/promo';
+@import 'blocks/header.scss';
+@import 'blocks/buttons';
