--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,5 +13,8 @@ a {
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
 @import 'blocks/benefit';
+@import 'blocks/title';
+@import 'blocks/consultation';
+@import 'blocks/forms';
 
 @import 'base/media';
