--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@ a {
     text-decoration: none;
 }
 .container {
+    position: relative;
     max-width: 950px;
     margin: 0 auto;
 }
@@ -16,5 +17,6 @@ a {
 @import 'blocks/title';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
 
 @import 'base/media';
