--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -35,6 +35,9 @@
         color: #FFFFFF;
         font-weight: 500;
         font-size: 14px;
+        &:hover {
+            color: black
+        }
         img {
             display: block;
             margin: 0 auto;
