--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -4,6 +4,7 @@
     font-size: 30px;
     color: #0D0D0D;
     text-transform: uppercase;
+    padding: 0 10px;
     &_left {
         color: #FFFFFF;
         font-size: 36px;
