--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,5 +18,8 @@ a {
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/reviews';
+@import 'blocks/footer';
 
 @import 'base/media';
