--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -26,6 +26,16 @@
             margin-right: 6px;
         }
     }
+    .catalog {
+        &__content {
+            justify-content: space-evenly;
+        }
+    }
+    .reviews {
+        &__wrapper {
+            padding: 0 20px;
+        }
+    }
 }
 @media (max-width: 767px) {
     .promo {
@@ -62,8 +72,61 @@
             margin-top: 10px;
         }
     }
+    .catalog {
+        &__tabs {
+            flex-direction: column;
+            margin-top: 55px;
+        }
+        &__tab {
+            margin-top: 15px;
+            height: auto;
+        }
+    }
+    .reviews {
+        &__block {
+            flex-direction: column;
+            align-items: center;
+        }
+        &__img {
+            margin-right: 0;
+        }
+        &__text {
+            text-align: center;
+            padding: 0 40px;
+        }
+    }
+    .footer {
+        &__info {
+            position: relative;
+            width: 100%;
+        }
+    }
 }
 @media (max-width: 575px) {
+    .button {
+        &:hover {
+            box-shadow: none;
+        }
+    }
+    .footer {
+        &__social-item {
+            &:hover {
+                box-shadow: none;
+            }
+        }
+    }
+    .benefit {
+        &__icon {
+            &:hover .benefit__subheader{
+                border: none;
+                color: black;
+                font-size: 18px;
+            }
+            &:hover .benefit__text {
+                font-size: 14px;
+            }
+        }
+    }
     .header {
         flex-direction: column;
         &__official {
@@ -102,6 +165,9 @@
         &__icon {
             margin: 0 auto;
             margin-bottom: 10px;
+            &:hover {
+                color: #fff;
+            }
             &:nth-child(3) {
                 margin-bottom: 0;
             }
@@ -118,6 +184,11 @@
         }
         .feed-form {
             width: 280px;
+        }
+    }
+    .reviews {
+        &__text {
+            padding: 0;
         }
     }
 }
