--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,6 +8,17 @@
     font-size: 12px;
     text-transform: uppercase;
     color: #FFFFFF;
+    transition: 0.5s;
+    &:hover {
+        box-shadow: 7px 7px darken($main-color, 20%), -7px -7px lighten($main-color, 20%);
+        cursor: pointer;
+    }
+    &_header {
+        &:hover {
+            box-shadow: 5px 5px darken($main-color, 20%), -5px -5px lighten($main-color, 20%);
+            cursor: pointer;
+        }
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
@@ -18,5 +29,10 @@
         width: 100%;
         height: 55px;
         font-size: 16px;
+    }
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
     }
 }
