--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -15,6 +15,10 @@
         img {
             width: 31px;
             height: 50px;
+            &:hover {
+                width: 32px;
+                height: 51px;
+            }
         }
     }
     .next {
